--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,6 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         buildConfigField "String", "APP_DB_NAME", '"app_handbook.db"'
-        buildConfigField "String", "ACTUAL_DB_FILE_NAME", '"handbook.db"'
     }
 
     buildFeatures {
@@ -32,10 +31,31 @@ android {
         }
     }
 
+    flavorDimensions "version"
+
+    productFlavors {
+        demo {
+            dimension "version"
+            applicationIdSuffix ".demo"
+            versionNameSuffix "-demo"
+
+            buildConfigField "String", "ACTUAL_DB_FILE_NAME", '"handbook.db"'
+        }
+        math {
+            dimension "version"
+            applicationId "com.mathhelper.math"
+            versionCode 63
+            versionName "5.0.0"
+
+            buildConfigField "String", "ACTUAL_DB_FILE_NAME", '"mh2020oct31.db"'
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -47,7 +67,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
 
     // Coroutines
@@ -75,6 +95,9 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    // Webkit
+    implementation 'androidx.webkit:webkit:1.3.0'
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
