--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,8 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        buildConfigField "String", "APP_DB_NAME", '"app_handbook.db"'
+        buildConfigField "String", "GITHUB", '"https://github.com/kitfist0/MyHandbook"'
+        buildConfigField "String", "LICENSE", '"https://github.com/kitfist0/MyHandbook/blob/master/LICENSE"'
     }
 
     buildFeatures {
@@ -38,16 +39,12 @@ android {
             dimension "version"
             applicationIdSuffix ".demo"
             versionNameSuffix "-demo"
-
-            buildConfigField "String", "ACTUAL_DB_FILE_NAME", '"handbook2020nov04.db"'
         }
         math {
             dimension "version"
             applicationId "com.mathhelper.math"
-            versionCode 63
-            versionName "5.0.0"
-
-            buildConfigField "String", "ACTUAL_DB_FILE_NAME", '"mh2020oct31.db"'
+            versionCode 64
+            versionName "5.0.1"
         }
     }
 
@@ -64,11 +61,11 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
 
     // Coroutines
     def coroutines_version = "1.3.9"
@@ -76,7 +73,6 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     // DI
-    def hilt_version = '2.28.3-alpha'
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
     // https://developer.android.com/training/dependency-injection/hilt-jetpack#viewmodels
@@ -99,7 +95,7 @@ dependencies {
     // Webkit
     implementation 'androidx.webkit:webkit:1.3.0'
 
-    testImplementation 'junit:junit:4.13'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
