--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,16 @@
 buildscript {
     ext {
+        appcompat_version = '1.2.0'
+        constaraint_version = '2.0.4'
+        core_ktx_version = '1.3.2'
+        coroutines_version = '1.3.9'
         hilt_version = '2.29.1-alpha'
-        kotlin_version = '1.4.10'
+        hilt_jetpack_version = '1.0.0-alpha02'
+        kotlin_version = '1.4.20'
+        lifecycle_version = '2.2.0'
+        material_version = '1.2.1'
         navigation_version = '2.3.1'
+        room_version = '2.2.5'
     }
     repositories {
         google()
