Billing module changes

--- a/billing/src/main/AndroidManifest.xml
+++ b/billing/src/main/AndroidManifest.xml
@@ -1,5 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    package="my.handbook.billing">
-
-</manifest>
+<manifest package="simple.billing"/>
