--- a/billing/build.gradle
+++ b/billing/build.gradle
@@ -18,7 +18,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
 
-        buildConfigField "String[]", "ALL_PRODUCT_IDS", '{"coffee.espresso", "coffee.cappuccino", "coffee.latte"}'
+        buildConfigField "String[]", "PRODUCT_IDS", '{"coffee.espresso", "coffee.cappuccino", "coffee.latte"}'
     }
 
     buildFeatures {
@@ -48,13 +48,11 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "androidx.core:core-ktx:$core_ktx_version"
 
-    // AndroidX Lifecycle
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-
     // Billing
     api 'com.android.billingclient:billing-ktx:3.0.2'
-
+    // Lifecycle
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     // Room
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
