--- a/billing/build.gradle
+++ b/billing/build.gradle
@@ -7,7 +7,7 @@ plugins {
 android {
 
     compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    buildToolsVersion '30.0.3'
 
     defaultConfig {
         minSdkVersion 21
@@ -51,14 +51,14 @@ dependencies {
     // Billing
     api 'com.android.billingclient:billing-ktx:3.0.2'
     // Lifecycle
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_ext_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     // Room
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
-    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
