--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,13 @@ buildscript {
         constaraint_version = '2.0.4'
         core_ktx_version = '1.3.2'
         coroutines_version = '1.3.9'
-        hilt_version = '2.30.1-alpha'
-        hilt_jetpack_version = '1.0.0-alpha02'
+        hilt_version = '2.32-alpha'
+        hilt_jetpack_version = '1.0.0-alpha03'
         kotlin_version = '1.4.30'
-        lifecycle_version = '2.2.0'
-        material_version = '1.2.1'
-        navigation_version = '2.3.2'
+        lifecycle_ext_version = '2.2.0'
+        lifecycle_version = '2.3.0'
+        material_version = '1.3.0'
+        navigation_version = '2.3.3'
         room_version = '2.2.6'
     }
     repositories {
