--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         lifecycle_ext_version = '2.2.0'
         lifecycle_version = '2.3.1'
         material_version = '1.4.0'
-        navigation_version = '2.3.5'
+        navigation_version = '2.4.0-alpha09'
         room_version = '2.3.0'
     }
     repositories {
