--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,24 @@
 buildscript {
     ext {
-        appcompat_version = '1.3.1'
-        constaraint_version = '2.1.0'
-        core_ktx_version = '1.6.0'
-        coroutines_version = '1.5.2'
-        hilt_version = '2.38.1'
+        appcompat_version = '1.4.1'
+        constaraint_version = '2.1.3'
+        core_ktx_version = '1.7.0'
+        coroutines_version = '1.6.1'
+        hilt_version = '2.42'
         hilt_jetpack_version = '1.0.0'
-        kotlin_version = '1.5.31'
+        kotlin_version = '1.6.21'
         lifecycle_ext_version = '2.2.0'
-        lifecycle_version = '2.3.1'
-        material_version = '1.4.0'
-        navigation_version = '2.4.0-alpha09'
-        room_version = '2.3.0'
+        lifecycle_version = '2.4.1'
+        material_version = '1.5.0'
+        navigation_version = '2.4.2'
+        room_version = '2.4.2'
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.2'
+        classpath 'com.android.tools.build:gradle:7.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
