--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,15 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.3'
+        classpath 'com.diffplug.spotless:spotless-plugin-gradle:6.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
+}
+
+subprojects {
+    apply from: "$project.rootDir/spotless.gradle"
 }
 
 allprojects {
