Refactor manifest and add data extraction rules

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,33 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="my.handbook">
 
     <application
-        android:allowBackup="false"
+        android:name=".HandbookApp"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".HandbookApp"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Handbook.DayNight">
+        android:theme="@style/Theme.Handbook.DayNight"
+        tools:targetApi="s">
 
         <activity
             android:name=".ui.MainActivity"
-            android:theme="@style/Theme.Handbook.DayNight"
-            android:label="@string/app_name"
             android:exported="true"
-            tools:node="merge">
+            android:theme="@style/Theme.Handbook.DayNight">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <meta-data
             android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts"/>
+            android:resource="@array/preloaded_fonts" />
 
     </application>
 
